--- a/演習6.html
+++ b/演習6.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style6.css" />
+    <link rel="stylesheet" href="演習6.css" />
     <title>演習６</title>
 
   </head>
